--- a/媒体.html
+++ b/媒体.html
@@ -10,6 +10,7 @@
 </header>
 <nav>
   <b>
+   <a href="出借人.html">导航</a> &nbsp; 
    <a href="出借人.html">出借人</a> &nbsp; 
    <a href="媒体.html">媒体</a>  &nbsp; 
    <a href="法院.html">法院</a>  &nbsp; 
@@ -19,9 +20,74 @@
 <main>
 <dl>
   <dt><strong>2022年</strong></dt>
-  <dl>
-    <a href="https://www.cqcb.com/shishijingwei/2022-08-07/4981958_pc.html">南方都市报：胡军代言翻车的悟空理财背后，起底玖富集团逾期回款“始末”</a>
-  </dl>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1740769319610062363&wfr=spider&for=pc">中国新闻周刊：胡军代言翻车：网贷“理财”如何掏空你的“钱包”</a>
+<dl>
+<a href="https://www.cqcb.com/shishijingwei/2022-08-07/4981958_pc.html">南方都市报：胡军代言翻车的悟空理财背后，起底玖富集团逾期回款“始末”</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1739972203498689766&wfr=spider&for=pc">华夏时报：代言产品悟空理财“爆雷”，胡军回应！盘点背后的玖富商业版图</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1739962430266674862&wfr=spider&for=pc">每日经济新闻：胡军代言“翻车”？疑事涉390亿元，工作室回应：合约已于两年前结束，一直在与相关部门沟通</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1739887469641034583&wfr=spider&for=pc">北京商报：胡军代言理财产品翻车？疑34万人受害，涉及金额高达390亿……网友：恨死你了</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1739831810306839242&wfr=spider&for=pc">21世纪经济报道：知名演员翻车，百花奖提名也被取消！疑似涉及390亿元！玖富旗下悟空理财涉嫌欺诈</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1737955415482176956&wfr=spider&for=pc">蓝鲸财经：玖富相关催收公司恒元信业再因“失联”遭列入经营异常名录</a>
+<dl>
+<a href="https://tech.hexun.com/2022-05-28/206039215.html">开甲财经：玖富创始人孙雷“消失”，玖富万卡联合湖北消费金融放贷</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1733230217346331375&wfr=spider&for=pc">21世纪经济报道：宣布转型后玖富首次披露年报：净亏损2.34亿同比收窄90% 技术服务收入已成营收支柱</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1702265253805934250&wfr=spider&for=pc">蓝鲸财经：业绩变脸？湖北消金最新披露营收竟减半德勤为会计顾问，玖富系股东高管换血“去玖富化”</a>
+<dl>
+  <dt><strong>2021年</strong></dt>
+<dl>
+<a href="https://insurance.hexun.com/2021-01-06/202770753.html">和讯名家：人保财险“三宗罪”被监管通报：再看玖富与人保的23亿费用纠纷后续！</a>
+<dl>
+  <dt><strong>2020年</strong></dt>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1685739703201588673&wfr=spider&for=pc">市界观察：P2P清零样本：玖富普惠退出方案三选一，34万投资人不买账</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1685583060765663524&wfr=spider&for=pc">大河财立方：玖富退出P2P！三种退出通道可选</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1685493604288647967&wfr=spider&for=pc">界面新闻：姗姗来迟！玖富宣布全面清退网贷，折价收购债权AMC或是空壳公司</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1685495155883407439&wfr=spider&for=pc">市界观察：玖富普惠宣布退出网络借贷，有回款被拖一个多月，称可多通道退出</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1681058328977676097&wfr=spider&for=pc">经济观察报：玖富网贷业务逾期爆雷：人保、太平履约险又牵涉，金融机构助贷业务遇险？</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1680762055729287359&wfr=spider&for=pc">人民日报：玖富旗下产品逾期：34万出借人或踩雷 传引入AMC机构债转</a>
+<dl>
+<a href="https://www.36kr.com/p/892336162221316">三言科技：玖富旗下平台逾期，胡军被出借人喊话，股价不足1美元</a>
+<dl>
+    <dt><strong>2020年8月前</strong></dt>
+<dl>
+<a href="https://insurance.hexun.com/2020-06-23/201600702.html">和讯名家：2019年Q4巨亏28.6亿元 玖富“断臂”转型不利与人保对簿公堂</a>
+<dl>
+<a href="https://www.thepaper.cn/newsDetail_forward_7962079">自媒体刘旷：玖富财报：友谊翻船，落入亏损</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1669884493038902578&wfr=spider&for=pc">新京报：人保财险、玖富从蜜月到互诉背后 险企压缩信用保证险</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1667743799462217979&wfr=spider&for=pc">人民政协网：北京市科技委走进玖富数科集团 调研科技创新企业融资现状</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1652186948387712065&wfr=spider&for=pc">每日经济新闻：玖富三季度净营收同比增80.5%至17.06亿，机构授信累计900亿</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1641992279159671804&wfr=spider&for=pc">贝壳财经：玖富上市背后：收费投诉渐增 曾被范冰冰告上法庭</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1640186706163862179&wfr=spider&for=pc">同花顺财经：玖富赴美IPO：5轮融资28亿 身陷高利贷丑闻</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1640187227244369312&wfr=spider&for=pc">中国质量万里行：又一家P2P巨头赴美上市 旗下销牌照齐</a>
+<dl>
+<a href="https://baijiahao.baidu.com/s?id=1608239692379626649&wfr=spider&for=pc">界面新闻：网贷平台入股银行再惹争议 玖富集团成农商行股东仅花费2000万</a>
+<dl>
+<a href="https://www.techweb.com.cn/finance/2018-04-13/2654875.shtml">砍柴网：前花旗银行副总裁肖尊雷博士加盟玖富 全面负责风险建模工作</a>
+<dl>
+<a href="https://www.jiemian.com/article/1618979.html">金融之家：神秘“玖富系”陷高利贷催收质疑，针对网贷投诉为何毫不在意</a>
+<dl>
+<a href="http://capital.people.com.cn/n1/2017/0310/c405954-29136274.html">经济参考报：玖富被指“履约险”含金量存水分</a>
+<dl>
+<a href="https://www.chinanews.com/fortune/2015/02-05/7038923.shtml">中国新闻网：玖富CEO孙雷再次亮相"非你莫属" 为悟空理财"抢人"</a>
 </main>
 <footer>
 <i><small>北京玖富2020年8月停止兑付，至今仍未立案！<br>
