--- a/媒体.html
+++ b/媒体.html
@@ -10,7 +10,7 @@
 </header>
 <nav>
   <b>
-   <a href="出借人.html">导航</a> &nbsp; 
+   <a href="index.html">导航</a> &nbsp; 
    <a href="出借人.html">出借人</a> &nbsp; 
    <a href="媒体.html">媒体</a>  &nbsp; 
    <a href="法院.html">法院</a>  &nbsp; 
