--- a/出借人.html
+++ b/出借人.html
@@ -33,6 +33,16 @@
   <dl>
   <a href="出借人/6.中央巡视组举报信-玖富.docx" download="6.中央巡视组举报信-玖富.docx">6.中央巡视组举报信-玖富.docx</a>
   </dl>
+  <dt><strong>玖富日报</strong></dt>
+  <dl>
+<li><a href="玖富日报（2023.5.13）出借人请留言 (2024_5_16 14_20_45).html">玖富日报（2023.5.13）出借人请留言.html</a></li>
+<li><a href="玖富日报（2024.5.10）ta们去哪了？ (2024_5_16 14_21_23).html">玖富日报（2024.5.10）ta们去哪了？.html</a></li>
+<li><a href="玖富日报（2024.5.11）环球金融应该对玖富负责吗？ (2024_5_16 14_21_22).html">玖富日报（2024.5.11）环球金融应该对玖富负责吗？.html</a></li>
+<li><a href="玖富日报（2024.5.12）出借人坚持申请政府信息公开 (2024_5_16 14_20_47).html">玖富日报（2024.5.12）出借人坚持申请政府信息公开.html</a></li>
+<li><a href="玖富日报（2024.5.14）房山区玖富信访近4万余次 (2024_5_16 14_20_11).html">玖富日报（2024.5.14）房山区玖富信访近4万余次.html</a></li>
+<li><a href="玖富日报（2024年4月18日） (2024_5_16 14_22_13).html">玖富日报（2024年4月18日）.html</a></li>
+<li><a href="玖富日报（2024年5月9日）突发，任春生落马，建议查查玖富公司 (2024_5_16 14_22_11).html">玖富日报（2024年5月9日）突发，任春生落马，建议查查玖富公司.html</a></li>
+  <dl>
 </main>
 <footer>
 <i><small>北京玖富2020年8月停止兑付，至今仍未立案！<br>
